k8s/mqtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mqtt
  template:
    metadata:
      labels:
        component: mqtt
    spec:
      containers:
        - name: mqtt
          image: ensaas/iot-home-mqtt:1.0.0
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
