k8s/mqtt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-dave-lee
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: mqtt
      student: dave-lee
  template:
    metadata:
      labels:
        component: mqtt
        student: dave-lee
    spec:
      containers:
        - name: mqtt
          image: ensaas/iot-home-mqtt:2.0.0
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
