k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: allguitars/iot-home-server:1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
