k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dave-lee
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
      student: dave-lee
  template:
    metadata:
      labels:
        component: server
        student: dave-lee
    spec:
      containers:
        - name: server
          image: ensaas/iot-home-server:1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 64Mi
            requests:
              cpu: 20m
              memory: 64Mi
