k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-sk-chen
spec:
  type: ClusterIP
  selector:
    component: server
    student: sk-chen
  ports:
    - port: 3000
      targetPort: 3000
