k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iot-home-sk-chen
  labels:
    name: assignment
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: iot-home-sk-chen.{namespace_name}.{cluster_name}.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: server-sk-chen
              servicePort: 3000
